<resources>
    <string name="app_name">Task manager</string>

    <!--Activity Task list-->
    <string name="title_list_task">Task list:</string>
    <string name="btn_new_task">New task</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_task_register">Task register</string>

    <!--Activity Task list-->
    <string name="lb_title">Title</string>
    <string name="lb_description">Description</string>
    <string name="lb_location">Location</string>
    <string name="btn_search_location">Search</string>
    <string name="btn_due_date">Due date</string>
    <string name="btn_save_task">Save task</string>
</resources>
