<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.prototypes.taskmanager.activities.TaskRegisterActivity">

    <TextView
        android:id="@+id/lbTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_title" />

    <EditText
        android:id="@+id/inputTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lbTitle" />

    <TextView
        android:id="@+id/lbDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputTitle"
        android:text="@string/lb_description" />

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbDescription"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/lbLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputDescription"
        android:text="@string/lb_location" />

    <EditText
        android:id="@+id/inputLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lbLocation"
        android:layout_toLeftOf="@+id/btnSearchLocation"
        android:layout_toStartOf="@+id/btnSearchLocation" />

    <Button
        android:id="@+id/btnSearchLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchLocation"
        android:text="@string/btn_search_location"
        android:layout_alignBottom="@+id/inputLocation"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDueDate"
        android:text="@string/btn_due_date"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!--<EditText-->
    <!--android:id="@+id/inputDueDate"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignBottom="@+id/btnDueDate"-->
    <!--android:layout_marginLeft="24dp"-->
    <!--android:layout_marginStart="24dp"-->
    <!--android:layout_toEndOf="@+id/btnDueDate"-->
    <!--android:layout_toRightOf="@+id/btnDueDate"-->
    <!--android:ems="10"-->
    <!--android:inputType="date" />-->

    <Button
        android:id="@+id/btnSaveTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="saveTask"
        android:text="@string/btn_save_task" />


</RelativeLayout>
